# examol-redoxmers

./: CONTRIBUTORS.md  README.md  pyproject.toml
2_initial-data/: 0_gather-initial-dataset.py  1_evaluate-datasets.ipynb  configs.py  runtime-vs-performance-summary.csv
3_initial-models/: 0_pull-test-datasets.ipynb
3_initial-models/nfp/: 1_summarize-runs.ipynb
3_initial-models/nfp-mpnn/: 1_summarize-runs.ipynb
3_initial-models/nfp-multifi-mpnn/: 0_run-test.py  1_summarize-runs.ipynb
3_initial-models/pyg/: 0_train-model.py  1_collect-results.ipynb  2_evaluate-multi-fidelity.ipynb  README.md
exaredox/score/: __init__.py  pytorch.py
exaredox/score/pytorch/: __init__.py  data.py  task.py  transforms.py  utils.py
exaredox/score/pytorch/models/: __init__.py  base.py  egnn.py  mpnn.py  utils.py
tests/score/: test_pytorch.py
