[project]
name = "exaredox"
version = "0.0.1"
authors = [
    { name = "Logan Ward", email = "lward@anl.gov" },
]
description = 'Using ExaMol to design molecules for organic flow batteris.'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["HPC", "AI", "Workflows", "Quantum Chemistry", "Chemical Engineering", "Batteries"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "examol>=0.0.5",
]

[tool.setuptools.packages.find]
include = ['exaredox*']

[project.urls]
repository = "https://github.com/exalearn/examol-redoxmers"

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-forked',
    'pytest-timeout',
    'pytest-cov',
    'pytest-skip-slow'
]
